cleanup docs
